# stock-forecast

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
scripts/: lint.sh  test.sh  type_check.sh
src/: __init__.py
